tests/paczka1/fuzzy1/34663075.err
Error in line 9: 1ZBUzEWCbd S696 2,6
Error in line 20: LzntRR3rj S186 37,6
Error in line 33: VDvB1aOz S186 61,8
